--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SF RGP Game</title>
-<link href="assets/javascript/game.js" rel="javascript" type="text/javascript">
+<title>steven crystal game</title>
 <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
 </head>
-
 <body>
-<div class="container">
+  <div class="container">
   <div class="row">
-    <div id="info" class="col-xs-4">game info</div>
-    <div id="buttons" class="col-xs-4">
-      <button type="button" class="btn btn-lg btn-default">START
-      </button>
+    <div class="col-xs-6 col-md-6">
+    	<h1>Number to Guess: <span id="number-to-guess"></span></h1>
+    	<h1>Your Score: <span id="your-score"></span></h1>
+      <h1>wins: <span id="wins"></span></h1>
+      <h1>lost: <span id="lost"></span></h1>
     </div>
-	  <div id="charselect" class="col-xs-4">
-	    <img id="ryu" class="char" src="assets/images/placehold.gif" width="200" height="200" alt="ryu"/>
-	    <img id="ken" class="char" src="assets/images/placehold.gif" width="200" height="200" alt="ken"/>
-      </div>
+  <div class="row">
+ 	<div class="col-xs-6 col-md-6">
+     <div id="crystals">
+     </div>
+    </div>
   </div>
-</div>
 
+    </div>
+  </div>
+  
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 
+<script type="text/javascript" src="assets/javascript/game.js">
+
+  </script>
 
 </body>
 </html>
